@@ -352,9 +352,6 @@
 			<td><fieldset>{organizers}</fieldset></td>
 		</tr>
 		<tr>
-			<td>{needs_registration}</td>
-		</tr>
-		<tr>
 			<td>{allows_multiple_registrations}</td>
 		</tr>
 		<tr>
